[NAE-2085] Refactor User
- fix errors and make build successful